add new html file

--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -11,13 +11,20 @@
     <p><b>Mail: </b> groisman288@gmail.com</p>
     <p><b>Telephone: </b>972-53-926-7352</p>
    <hr>
-   <p><img src="C:\Users\grois\Desktop\HTML\Photo\3.jpg" width="300" height="300" alt="Photo"></p>
-   
+   <picture>
+  <source scrset="Photo/3.jpg"
+   <p><img src="Photo/3.jpg" width="300" height="300" alt="Photo"></p>
+  </picture>
   <p> <b>My LINKs:</b></p>
   <p> <b>Instagram:</b></p>
-    <p><a href="https://www.instagram.com/yana_groisman/"><img src="C:\Users\grois\Desktop\HTML\Photo\instagram-logo.png" width="200" height="200"  alt="Photo"></p>
-     <p> <b>Facebook:</b></p>                    
-    <p><a href="https://www.facebook.com/profile.php?id=100008968751498"><img src="C:\Users\grois\Desktop\HTML\Photo\FB logo.jpg" width="250" height="250"  alt="Photo"></p>
-
+<picture>
+    <source srcset="Photo/instagram-logo.png"
+    <p><a href="https://www.instagram.com/yana_groisman/"><img src="Photo/instagram-logo.png" width="200" height="200"  alt="Photo"></p>
+    </picture>
+     <p> <b>Facebook:</b></p> 
+     <picture>  
+      <source srcset="Photo/FB-logo.jpg"                 
+    <p><a href="https://www.facebook.com/profile.php?id=100008968751498"><img src="Photo/FB-logo.jpg" width="250" height="250"  alt="Photo"></p>
+    </picture>
 </body>
 </html>
