--- a/My page.html
+++ b/My page.html
@@ -8,7 +8,10 @@
     <hr><b>Welcome to my DJ website :)</b>
     <heading2><b></b></heading2>
     <hr>
-    <p><img src="C:\Users\grois\Desktop\HTML\Photo\4.jpg" width="700" height="700" alt="Photo"></p>
+    <picture> 
+      <sourse srcset="Photo/4.jpg"
+    <p><img src="Photo/4.jpg" width="700" height="700" alt="Photo"></p>
+  </picture>
     <p><b>Name: </b> DJ Yana Groisman</p>
     <p><b>Date of birth:</b> 28/09/1994</p>
     <p><b>Place of birth: </b>Kharkiv/Ukraine</p>
@@ -25,14 +28,23 @@
         <li><td>LATINO</td></li>
     </ul>
     <hr>
-<p> <a href="file:///C:/Users/grois/Desktop/HTML/Pages/Gallery.html"><img src="C:\Users\grois\Desktop\HTML\Photo\1.jpg" width="700" height="700"  alt="Photo"></p>
+    <picture>
+      <sourse srcset="Photo/1.jpg"
+<p> <a href="Pages/Gallery.html"><img src="Photo/1.jpg" width="700" height="700"  alt="Photo"></p>
   <p><heading5><b>MY GALLERY</b></heading5></p>
+</picture>
 <hr>
-    <p><a href="file:///C:/Users/grois/Desktop/HTML/Pages/Contact.html"><img src="Photo/contact.jpg" width="600" height="300"  alt="Photo"></p>
+<picture>
+  <sourse srcset="Photo/contact.jpg"
+    <p><a href="Pages/Contact.html"><img src="Photo/contact.jpg" width="700" height="300"  alt="Photo"></p>
   <p> <b>MY CONTACTs</b></p>
+</picture>
 <hr>
-  <p> <a href="https://soundcloud.com/djgroisman"><img src="Photo/soundcloud-logo.png" width="300" height="300"  alt="Photo"></p>
+<picture>
+  <sourse srcset="Photo/soundcloud.jpg"
+  <p> <a href="https://soundcloud.com/djgroisman"><img src="Photo/soundcloud.jpg" width="500" height="300"  alt="Photo"></p>
     <p><b>MY SETs</b></p>
+  </picture>
 
  
 </body>
