--- a/Pages/Gallery.html
+++ b/Pages/Gallery.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 </head>
 <body>
     <heading1><b>GALLERY </b></heading1>
     <heading2><b></b></heading2>
     <hr>
-   <p><img src="C:\Users\grois\Desktop\HTML\Photo\2.jpg" width="900" height="900" alt="Photo"></p>
+    <picture>
+      <source srcset="Photo/4.jpg"> 
+      <img src="Photo/4.jpg" width="700" height="700" alt="Photo">
+  </picture>
    <hr>
-    <p><img src="C:\Users\grois\Desktop\HTML\Photo\6.jpg" width="900" height="900"  alt="Photo"></p>
-  <hr>                
-    <p><img src="C:\Users\grois\Desktop\HTML\Photo\5.jpg" width="750" height="900"  alt="Photo"></p>
+   <picture>
+    <source srcset="Photo/6.jpg"> 
+    <p><img src="Photo/6.jpg" width="900" height="900"  alt="Photo"></p>
+  </picture>
+  <hr> 
+  <picture>
+    <source srcset="Photo/5.jpg">                
+    <p><img src="Photo/5.jpg" width="750" height="900"  alt="Photo"></p>
+  </picture>
 <hr>
 </body>
 </html>
