add new html file

--- a/My page.html
+++ b/My page.html
@@ -1,51 +1,65 @@
 <!DOCTYPE html>
 <html>
-<head>
-
+  <head>
+    <style>
+    body {
+      background-image: url("photo/Back.jpg");
+    }
+    </style>
+    </head>
+<link rel="stylesheet" href="Styles.css">
 </head>
 <body>
-    <heading1><b>Hello world! </b></heading1>
-    <hr><b>Welcome to my DJ website :)</b>
+  <div>
+  <button id="Menu" type="button">Sign in</button>
+  <button type= "button">Music</button>
+  <button class="button button1">Green</button>
+  
+</div>
+ 
+    <heading1><b class="firstPar">Welcome! </b></heading1>
+    <hr>
+    <b> My DJ world :)</b>
     <heading2><b></b></heading2>
     <hr>
     <picture> 
       <sourse srcset="Photo/4.jpg"
-    <p><img src="Photo/4.jpg" width="700" height="700" alt="Photo"></p>
+    <p><img src="Photo/2.jpg" width="700" height="700" alt="Photo"></p>
   </picture>
-    <p><b>Name: </b> DJ Yana Groisman</p>
-    <p><b>Date of birth:</b> 28/09/1994</p>
+    <h2><p class="left"></p>><b></b>DJ Yana Groisman</p>
+   
     <p><b>Place of birth: </b>Kharkiv/Ukraine</p>
     <p><b>Location:</b> Haifa, Israel</p>
-    <p><b>Languages:</b> Hebrew,English,Russian,Ukrainian</p>
+    </h2>
     <hr>
-    <p><b>Genres of music:</b></p>
-    <ul>
+    <p><h2><b>Sound:</b></h2></p>
+    <ul><h1>
         <li><td>MELODIC & PROGRESS TECHNO</td></li></td>
         <li><td>TECH & AFRO & ORGANIC HOUSE</td></li>
         <li><td>DISCO HOUSE</td></li>
         <li><td>MAINSTREAM</td></li>
         <li><td>UKRAINIAN MUSIC</td></li>
-        <li><td>LATINO</td></li>
+        <li><td>LATINO</td></li></h1>
     </ul>
     <hr>
     <picture>
       <sourse srcset="Photo/1.jpg"
-<p> <a href="Pages/Gallery.html"><img src="Photo/1.jpg" width="700" height="700"  alt="Photo"></p>
-  <p><heading5><b>MY GALLERY</b></heading5></p>
+<p> <h1><a href="Pages/Gallery.html"><img src="Photo/1.jpg" width="700" height="700"  alt="Photo"></p></h1>
+
+
+  <p><h1><a href="Pages/Gallery.html"><img src="Photo/Foto.jpg" width="300" height="300"  alt="Photo"></p></h1>
 </picture>
 <hr>
 <picture>
   <sourse srcset="Photo/contact.jpg"
-    <p><a href="Pages/Contact.html"><img src="Photo/contact.jpg" width="700" height="300"  alt="Photo"></p>
-  <p> <b>MY CONTACTs</b></p>
+    <p><h1><a href="Pages/Contact.html"><img src="Photo/contact.jpg" width="600" height="300"  alt="Photo"></p></h1>
 </picture>
 <hr>
 <picture>
   <sourse srcset="Photo/soundcloud.jpg"
-  <p> <a href="https://soundcloud.com/djgroisman"><img src="Photo/soundcloud.jpg" width="500" height="300"  alt="Photo"></p>
-    <p><b>MY SETs</b></p>
-  </picture>
+  <p> <h1><a href="https://soundcloud.com/djgroisman"><img src="Photo/soundcloud.jpg" width="600" height="300"  alt="Photo"></h1></p>
 
- 
+  </picture>
+</div>
 </body>
 </html>
