--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+  <style>
+  body {
+    background-image: url("photo/l8eykm.webp");
+  }
+  </style>
+  </head>
+<link rel="stylesheet" href="Styles.css">
 </head>
 <body>
     <heading1><b>CONTACTS </b></heading1>
     <heading2><b></b></heading2>
     <hr>
-    <p><b>Location: </b> Haifa, Israel</p>
-    <p><b>Mail: </b> groisman288@gmail.com</p>
-    <p><b>Telephone: </b>972-53-926-7352</p>
+    <h1><b><p>Location:</p></b>Haifa, Israel</p></h1>
+    <h2><p class="center"></p>><b></b></p>
    <hr>
    <picture>
   <source scrset="Photo/3.jpg"
    <p><img src="Photo/3.jpg" width="300" height="300" alt="Photo"></p>
-  </picture>
+ 
   <p> <b>My LINKs:</b></p>
   <p> <b>Instagram:</b></p>
-<picture>
     <source srcset="Photo/instagram-logo.png"
     <p><a href="https://www.instagram.com/yana_groisman/"><img src="Photo/instagram-logo.png" width="200" height="200"  alt="Photo"></p>
-    </picture>
-     <p> <b>Facebook:</b></p> 
-     <picture>  
-      <source srcset="Photo/FB-logo.jpg"                 
-    <p><a href="https://www.facebook.com/profile.php?id=100008968751498"><img src="Photo/FB-logo.jpg" width="250" height="250"  alt="Photo"></p>
+  </p>
+     <p><heading1>Facebook:</heading1></p>   
+
+<a href="https://www.facebook.com/profile.php?id=100008968751498"><img src="Photo/FB-logo.jpg" width="250" height="250"  alt="Photo"></p>
     </picture>
 </body>
 </html>
