--- a/Pages/Gallery.html
+++ b/Pages/Gallery.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+    body {
+      background-image: url("photo/l8eykm.webp");
+    }
+    </style>
+<link rel="stylesheet" href="PROJECT/Styles/css">
 </head>
 <body>
-    <heading1><b>GALLERY </b></heading1>
+   <heading1><b>GALLERY </b></div></heading1>
     <heading2><b></b></heading2>
     <hr>
     <picture>
-      <source srcset="Photo/4.jpg"> 
-      <img src="Photo/4.jpg" width="700" height="700" alt="Photo">
+      <img src="Photo/6.jpg" width="700" height="700" alt="Photo">
   </picture>
    <hr>
    <picture>
     <source srcset="Photo/6.jpg"> 
-    <p><img src="Photo/6.jpg" width="900" height="900"  alt="Photo"></p>
-  </picture>
-  <hr> 
-  <picture>
-    <source srcset="Photo/5.jpg">                
     <p><img src="Photo/5.jpg" width="750" height="900"  alt="Photo"></p>
   </picture>
+  <hr> 
 <hr>
 </body>
 </html>
